--- a/UI-Layouts/Table/src/main/res/values/strings.xml
+++ b/UI-Layouts/Table/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">Table</string>
+    <string name="app_name">Table Layout</string>
     <string name="xxxxx_string">XXXXX</string>
 </resources>
