--- a/UI-Layouts/Relative/src/main/res/values/strings.xml
+++ b/UI-Layouts/Relative/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="done">Done</string>
     <string name="date">Date</string>
     <string name="hour">Hour</string>
+    <string name="button_send">Send</string>
 </resources>
